added banner image

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     <!-- banner -->
     <div id="home" class="banner-section d-flex">
-      <div class="container">
+      <div class="container text-left">
         <div class="row">
-          <div class="col-lg-7 bnr-txt-grid">
+          <div class="col-lg-8 bnr-txt-grid">
             <div class="bnr-inner-grid-txt mt-sm-5">
               <h6>Welcome to my Portfolio</h6>
               <h2>Hello <span>I'm Prabhashankar Kannapan</span></h2>
