minor text changes

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- process -->
     <section class="experience py-5" id="experience">
       <div class="container py-3">
-        <p class="paragraph">work experience</p>
+        <p class="paragraph">Studies and Qualifications</p>
         <h3 class="heading mb-sm-5 mb-4">My Education</h3>
         <div class="middile-inner-con">
           <div class="tab-main mx-auto">
