--- a/index.html
+++ b/index.html
@@ -13,45 +13,61 @@
 <body>
     <header>
         <nav class="nav-bar">
-            <h1 id="logo">
+            <!-- <h1 id="logo">
                 <a href="index.html" id="logoLink"><i class="fa fa-adjust"></i> <span>P</span>SK</a>
-            </h1>
+            </h1> -->
             <ul class="nav-menu">
                 <li class="nav-menu-item"><a href="#home">Home</a></li>
                 <li class="nav-menu-item"><a href="#skills">Skills</a></li>
                 <li class="nav-menu-item"><a href="#works">Works</a></li>
                 <li class="nav-menu-item"><a href="#education">Education</a></li>
                 <li class="nav-menu-item"><a href="#contact">Contact</a></li>
+                <li class="nav-menu-item toggle-theme">Turn on Dark Mode</li>
             </ul>
         </nav>
     </header>
     <section id="home">
         <div class="cover">
-            <div id="cover-content">
-                <h1 class=" light">Hi I am Prabhashankar</h1>
-                <h3 class="light">aka PSK</h3>
+            <div id="cover-content" class="section">
+                <h1>Hi, I am Prabhashankar</h1>
+                <!-- <h4>aka PSK</h4> -->
+            </div>
+            <div>
+                <center><h6>Wanna know more about me?</h6></center>
             </div>
         </div>
     </section>
     <section id="skills">
         <div class="section">
-            <h1>Skills</h1>
+            <h3>Skills</h3>
         </div>
     </section>
     <section id="works">
         <div class="section">
-            <h1>WOrks</h1>
+            <h3>Works</h3>
+            <div class="table">
+               <div class="row">
+                <div class="card card-3">
+                    <h6>LearnERA</h6></div>
+                <div class="card card-3"><h6>Smartitude</h6></div>
+                <div class="card card-3"><h6>Klant</h6></div>
+               </div>
+               <div class="row">
+                <div class="card card-3"><h6>CaterBazar</h6></div>
+                <div class="card card-3"><h6>Wisdom App</h6></div>
+                <div class="card card-3"><h6>MoHFW Tracker</h6></div>
+               </div>
+            </div>
         </div>
-
     </section>
     <section id="education">
         <div class="section">
-            <h1>Education</h1>
+            <h3>Education</h3>
         </div>
     </section>
     <section id="contact">
-        <div class="half-section">
-            <h1>Contact</h1>
+        <div class="section">
+            <h3>Contact</h3>
         </div>
 
 
@@ -59,6 +75,6 @@
     <footer>
         <p>Made with <span class="heart">❤</span> by Prabhashankar</h5>
     </footer>
+    <script src="js/app.js"></script>
 </body>
-
 </html>
