--- a/index.html
+++ b/index.html
@@ -49,24 +49,30 @@
             <h3>Works</h3>
             <div class="table">
                 <div class="row">
-                    <div class="card card-3">
+                    <div class="card card-work">
                         <h6>LearnERA</h6>
+                        <p>LearnERA is an Android app for students of Rajagiri College using which they could check
+                            their academic metrics and receive notifications of the right thing at the right time.</p>
                     </div>
-                    <div class="card card-3">
+                    <div class="card card-work">
                         <h6>Smartitude</h6>
+                        <p>Smartitude is a progressive web app for creating, managing and taking online MCQ exams.</p>
                     </div>
-                    <div class="card card-3">
+                    <div class="card card-work">
                         <h6>Klant</h6>
+                        <p>Klant is an e-commerce platform for small scale businesses to sell their products to the
+                            massess at ease.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="card card-3">
+                    <div class="card card-work">
                         <h6>CaterBazar</h6>
+                        <p>CaterBazar is an </p>
                     </div>
-                    <div class="card card-3">
+                    <div class="card card-work">
                         <h6>Wisdom App</h6>
                     </div>
-                    <div class="card card-3">
+                    <div class="card card-work">
                         <h6>MoHFW Tracker</h6>
                     </div>
                 </div>
@@ -76,17 +82,57 @@
     <section id="education">
         <div class="section">
             <h3>Education</h3>
+            <table>
+                <tr class="content-education">
+                    <td></td>
+                    <td class="indicator-education indicator-education-selected"></td>
+                    <td>
+                        <div class="content-education-right">
+                            <h5>Bachelor's Degree in Information Technology</h5>
+                            <h6>Rajagiri School of Engineering and Technology 2015-19</h6>
+                        </div>
+                    </td>
+                </tr>
+
+                <tr class="content-education">
+                    <td>
+                        <div class="content-education-left">
+                            <h5>Higher Secondary School</h5>
+                            <h6>Don Bosco Senior Secondary School, Vaduthala 2013-15</h6>
+                        </div>
+                    </td>
+                    <td class="indicator-education indicator-education-selected"></td>
+                    <td></td>
+                </tr>
+
+                <tr class="content-education">
+                    <td></td>
+                    <td class="indicator-education indicator-education-selected"></td>
+                    <td>
+                        <div class="content-education-right">
+                            <h5>Matriculation</h5>
+                            <h6>Don Bosco Senior Secondary School, Vaduthala 2012-13</h6>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </div>
     </section>
     <section id="contact">
         <div class="section">
             <h3>Contact</h3>
+            <div class="table">
+                <textarea class="form-input" name="message" id="message" cols="80" rows="5"></textarea>
+                <input type="text" name="name" class="form-input" id="name">
+                <input type="email" name="email" id="email" class="form-input">
+                <button type="submit" class="form-input">Submit</button>
+            </div>
         </div>
-
-
     </section>
     <footer>
-        <p>Made with <span class="heart">❤</span> by Prabhashankar</h5>
+        <div>
+            <p>Made with <span class="heart">❤</span> by Prabhashankar</p>
+        </div>
     </footer>
     <script src="js/app.js"></script>
 </body>
