--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 <!-- <h4>aka PSK</h4> -->
             </div>
             <div>
-                <center><h6>Wanna know more about me?</h6></center>
+                <center>
+                    <h6>Wanna know more about me?</h6>
+                </center>
             </div>
         </div>
     </section>
@@ -46,17 +48,28 @@
         <div class="section">
             <h3>Works</h3>
             <div class="table">
-               <div class="row">
-                <div class="card card-3">
-                    <h6>LearnERA</h6></div>
-                <div class="card card-3"><h6>Smartitude</h6></div>
-                <div class="card card-3"><h6>Klant</h6></div>
-               </div>
-               <div class="row">
-                <div class="card card-3"><h6>CaterBazar</h6></div>
-                <div class="card card-3"><h6>Wisdom App</h6></div>
-                <div class="card card-3"><h6>MoHFW Tracker</h6></div>
-               </div>
+                <div class="row">
+                    <div class="card card-3">
+                        <h6>LearnERA</h6>
+                    </div>
+                    <div class="card card-3">
+                        <h6>Smartitude</h6>
+                    </div>
+                    <div class="card card-3">
+                        <h6>Klant</h6>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card card-3">
+                        <h6>CaterBazar</h6>
+                    </div>
+                    <div class="card card-3">
+                        <h6>Wisdom App</h6>
+                    </div>
+                    <div class="card card-3">
+                        <h6>MoHFW Tracker</h6>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -77,4 +90,5 @@
     </footer>
     <script src="js/app.js"></script>
 </body>
+
 </html>
