--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <li class="nav-menu-item"><a href="#achievements">Achievements</a></li>
                 <li class="nav-menu-item"><a href="#education">Education</a></li>
                 <li class="nav-menu-item"><a href="#contact">Contact</a></li>
-
-                <!-- <li class="nav-menu-item toggle-theme">Turn on Dark Mode</li> -->
+                <!-- <li class="nav-menu-item toggle-theme"><a href="javascript:void(0);">Toggle Dark Theme</a></li> -->
             </ul>
         </nav>
     </header>
