styling bio section

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             </ul>
         </nav>
     </header>
-    <!-- <section id="home container">
-        <div class="cover">
-            <div id="cover-content" class="section">
-                <h1>Hi, I am Prabhashankar</h1>
+     <section id="bio">
+        <div class="bio container">
+            <div class="bio-image-container card-elevated" >
+                <img src="./images/cover.jpg" alt="Photograph of Prabhashankar Kannapan">
             </div>
-            <div>
-                <center>
-                    <h6>Wanna know more about me?</h6>
-                </center>
+            <div class="bio-name">
+                <h3>hi, i am</h3>
+                <h1>prabhashankar</h1>
+                <h4 class="bio-description">a software engineer hailing from<br/>kochi, the queen of the arabian sea</h4>
             </div>
         </div>
     </section>
-    <section id="skills">
+  <!--  <section id="skills">
         <div class="section">
             <h3>Skills</h3>
         </div>
