added heading with style

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
      <section id="bio">
-        <div class="bio container">
+        <div class="bio-container container">
             <div class="bio-image-container card-elevated" >
                 <img src="./images/cover.jpg" alt="Photograph of Prabhashankar Kannapan">
             </div>
@@ -43,12 +43,15 @@
             </div>
         </div>
     </section>
-  <!--  <section id="skills">
-        <div class="section">
-            <h3>Skills</h3>
+    <section id="skills">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-header-text">skills</h2>
+            <div class="section-header-underline"></div>
+            </div>
         </div>
     </section>
-    <section id="works">
+   <!-- <section id="works">
         <div class="section">
             <h3>Works</h3>
             <div class="table">
