skills section 90% completed

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <img id="logo" src="./images/logo.svg" alt="Prabhashankar's Logo" />
             </span>
             <ul class="nav-menu" id="nav-menu">
-                <li> 
+                <li>
                     <a href="javascript:void(0);" class="icon" onclick="toggleNavigationMenu()">
-                            <i class="fa fa-bars"></i>
+                        <i class="fa fa-bars"></i>
                     </a>
                 </li>
                 <li class="nav-menu-item menu-selected"><a href="#home">Home</a></li>
@@ -31,27 +31,80 @@
             </ul>
         </nav>
     </header>
-     <section id="bio">
+    <section id="bio">
         <div class="bio-container container">
-            <div class="bio-image-container card-elevated" >
+            <div class="bio-image-container card-elevated">
                 <img src="./images/cover.jpg" alt="Photograph of Prabhashankar Kannapan">
             </div>
             <div class="bio-name">
                 <h3>hi, i am</h3>
                 <h1>prabhashankar</h1>
-                <h4 class="bio-description">a software engineer hailing from<br/>kochi, the queen of the arabian sea</h4>
+                <h4 class="bio-description">a software engineer hailing from<br />kochi, the queen of the arabian sea
+                </h4>
             </div>
         </div>
     </section>
     <section id="skills">
-        <div class="container">
+        <div class="skills-container container">
             <div class="section-header">
                 <h2 class="section-header-text">skills</h2>
-            <div class="section-header-underline"></div>
+                <div class="section-header-underline"></div>
+            </div>
+        </div>
+        <div class="skills-sectors">
+            <div class="skills-sector-row-lg">
+                <div class="skills-sector-container">
+                    <h4 class="skills-sector-heading">software development</h4>
+                    <h5>native android app development</h5>
+                    <p>3 years experience</p>
+                    <div class="progressbar-container card-elevated">
+                        <div class="progressbar bg-green-grad progress-native-android"></div>
+                    </div>
+                    <p class="inline">experience level</p>
+                    <h5 class="inline">intermediate</h5>
+                </div>
+                <div class="skills-sector-container">
+                    <h4 class="skills-sector-heading">&nbsp;</h4>
+                    <h5>web application development</h5>
+                    <p>1 year experience</p>
+                    <div class="progressbar-container card-elevated">
+                        <div class="progressbar bg-blue-grad progress-web-app"></div>
+                    </div>
+                    <p class="inline">experience level</p>
+                    <h5 class="inline">intermediate</h5>
+                </div>
+            </div>
+            <div class="skills-sector-row-lg">
+                <div class="skills-sector-container">
+                    <h4 class="skills-sector-heading">application designing</h4>
+                    <h5>responsive app designing</h5>
+                    <p>2 months experience</p>
+                    <div class="progressbar-container card-elevated">
+                        <div class="progressbar bg-red-grad progress-designing"></div>
+                    </div>
+                    <p class="inline">experience level</p>
+                    <h5 class="inline">beginner</h5>
+                </div>
+                <div class="skills-sector-container">
+                    <h4 class="skills-sector-heading">project management</h4>
+                    <h5>software project management</h5>
+                    <p>1.5 years experience</p>
+                    <div class="progressbar-container card-elevated">
+                        <div class="progressbar bg-blue-grad progress-project-management"></div>
+                    </div>
+                    <p class="inline">experience level</p>
+                    <h5 class="inline">beginner</h5>
+                </div>
+            </div>
+        </div>
+        <div class="skills-languages">
+            <h4 class="skills-languages-heading">languages</h4>
+            <div class="card-sunken skills-languages-container">
+                <h5>hello</h5>
             </div>
         </div>
     </section>
-   <!-- <section id="works">
+    <!-- <section id="works">
         <div class="section">
             <h3>Works</h3>
             <div class="table">
