languages and tools section done

--- a/index.html
+++ b/index.html
@@ -100,7 +100,68 @@
         <div class="skills-languages">
             <h4 class="skills-languages-heading">languages</h4>
             <div class="card-sunken skills-languages-container">
-                <h5>hello</h5>
+                <div class="skills-languages-row-lg">
+                    <div class="skills-languages-card bg-red-grad">
+                        <h4>java</h4>
+                        <p>level</p>
+                        <h5>intermediate</h5>
+                        <p>experience</p>
+                        <h5>3 years</h5>
+                    </div>
+                    <div class="skills-languages-card bg-blue-grad">
+                        <h4>kotlin</h4>
+                        <p>level</p>
+                        <h5>intermediate</h5>
+                        <p>experience</p>
+                        <h5>1 year</h5>
+                    </div>
+                </div>
+                <div class="skills-languages-row-lg">
+                    <div class="skills-languages-card bg-yellow-grad">
+                        <h4>javascript</h4>
+                        <p>level</p>
+                        <h5>intermediate</h5>
+                        <p>experience</p>
+                        <h5>1 year</h5>
+                    </div>
+                    <div class="skills-languages-card bg-green-grad">
+                        <h4>python</h4>
+                        <p>level</p>
+                        <h5>beginner</h5>
+                        <p>experience</p>
+                        <h5>6 months</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="skills-tools">
+            <h4 class="skills-tools-heading">frameworks & tools</h4>
+            <div class="card-sunken skills-tools-container">
+               <h5 class="tool-name">android-sdk</h5>
+               <h5 class="tool-name">react.js</h5>
+               <h5 class="tool-name">firebase</h5>
+               <h5 class="tool-name">django</h5>
+               <h5 class="tool-name">node.js</h5>
+               <h5 class="tool-name">jetpack library</h5>
+               <h5 class="tool-name">dagger</h5>
+               <h5 class="tool-name">retrofit</h5>
+               <h5 class="tool-name">ms office</h5>
+               <h5 class="tool-name">aws</h5>
+               <h5 class="tool-name">room db</h5>
+               <h5 class="tool-name">mongodb</h5>
+               <h5 class="tool-name">mysql</h5>
+               <h5 class="tool-name">mongoose</h5>
+               <h5 class="tool-name">sequelize</h5>
+               <h5 class="tool-name">coroutines</h5>
+               <h5 class="tool-name">graphql</h5>
+               <h5 class="tool-name">rest api</h5>
+               <h5 class="tool-name">android studio</h5>
+               <h5 class="tool-name">vs code</h5>
+               <h5 class="tool-name">figma</h5>
+               <h5 class="tool-name">git</h5>
+               <h5 class="tool-name">jwt</h5>
+               <h5 class="tool-name">jira</h5>
+               <h5 class="tool-name">photoshop</h5>
             </div>
         </div>
     </section>
