--- a/index.html
+++ b/index.html
@@ -250,11 +250,29 @@
             </div>
         </div>
     </section>-->
-    <!-- <footer>
-        <div>
-            <p>Made with <span class="heart">❤</span> by Prabhashankar</p>
+    <footer class="card-elevated">
+        <div class="container footer-container">
+            <h2 class="footer-title">made with <span class="heart">❤</span> by prabhashankar</h2>
+            <h6 class="footer-follow">follow me on</h6>
+            <div class="social-icons-container">
+                <div class="icon-container-rounded-square card-elevated">
+                    <img src="./images/github.svg" alt="Link to Prabhashankar's GitHub Profile">
+                </div>
+                <div class="icon-container-rounded-square card-elevated">
+                    <img src="./images/linkedin.svg" alt="Link to Prabhashankar's GitHub Profile">
+                </div>
+                <div class="icon-container-rounded-square card-elevated">
+                    <img src="./images/envelope.svg" alt="Link to Prabhashankar's GitHub Profile">
+                </div>
+                <div class="icon-container-rounded-square card-elevated">
+                    <img src="./images/facebook.svg" alt="Link to Prabhashankar's GitHub Profile">
+                </div>
+                <div class="icon-container-rounded-square card-elevated">
+                    <img src="./images/whatsapp.svg" alt="Link to Prabhashankar's GitHub Profile">
+                </div>
+            </div>
         </div>
-    </footer>  -->
+    </footer> 
     <script src="js/app.js"></script>
 </body>
 
