achievements and my works incomplete

--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
                 <h2 class="section-header-text">skills</h2>
                 <div class="section-header-underline"></div>
             </div>
-        </div>
-        <div class="skills-sectors">
-            <div class="skills-sector-row-lg">
-                <div class="skills-sector-container">
+            <div class="skills-sectors flex-container">
+                <div class="skills-sector-container flex-item-left">
                     <h4 class="skills-sector-heading">software development</h4>
                     <h5>native android app development</h5>
                     <p>3 years experience</p>
@@ -63,7 +61,7 @@
                     <p class="inline">experience level</p>
                     <h5 class="inline">intermediate</h5>
                 </div>
-                <div class="skills-sector-container">
+                <div class="skills-sector-container flex-item-right">
                     <h4 class="skills-sector-heading">&nbsp;</h4>
                     <h5>web application development</h5>
                     <p>1 year experience</p>
@@ -73,9 +71,7 @@
                     <p class="inline">experience level</p>
                     <h5 class="inline">intermediate</h5>
                 </div>
-            </div>
-            <div class="skills-sector-row-lg">
-                <div class="skills-sector-container">
+                <div class="skills-sector-container flex-item-left">
                     <h4 class="skills-sector-heading">application designing</h4>
                     <h5>responsive app designing</h5>
                     <p>2 months experience</p>
@@ -85,7 +81,7 @@
                     <p class="inline">experience level</p>
                     <h5 class="inline">beginner</h5>
                 </div>
-                <div class="skills-sector-container">
+                <div class="skills-sector-container flex-item-right">
                     <h4 class="skills-sector-heading">project management</h4>
                     <h5>software project management</h5>
                     <p>1.5 years experience</p>
@@ -96,111 +92,205 @@
                     <h5 class="inline">beginner</h5>
                 </div>
             </div>
-        </div>
-        <div class="skills-languages">
-            <h4 class="skills-languages-heading">languages</h4>
-            <div class="card-sunken skills-languages-container">
-                <div class="skills-languages-row-lg">
-                    <div class="skills-languages-card bg-red-grad">
-                        <h4>java</h4>
-                        <p>level</p>
-                        <h5>intermediate</h5>
-                        <p>experience</p>
-                        <h5>3 years</h5>
+            <div class="skills-languages">
+                <h4 class="skills-languages-heading">languages</h4>
+                <div class="card-sunken skills-languages-container">
+                    <div class="skills-languages-row-lg">
+                        <div class="skills-languages-card bg-red-grad">
+                            <h4>java</h4>
+                            <p>level</p>
+                            <h5>intermediate</h5>
+                            <p>experience</p>
+                            <h5>3 years</h5>
+                        </div>
+                        <div class="skills-languages-card bg-blue-grad">
+                            <h4>kotlin</h4>
+                            <p>level</p>
+                            <h5>intermediate</h5>
+                            <p>experience</p>
+                            <h5>1 year</h5>
+                        </div>
                     </div>
-                    <div class="skills-languages-card bg-blue-grad">
-                        <h4>kotlin</h4>
-                        <p>level</p>
-                        <h5>intermediate</h5>
-                        <p>experience</p>
-                        <h5>1 year</h5>
-                    </div>
-                </div>
-                <div class="skills-languages-row-lg">
-                    <div class="skills-languages-card bg-yellow-grad">
-                        <h4>javascript</h4>
-                        <p>level</p>
-                        <h5>intermediate</h5>
-                        <p>experience</p>
-                        <h5>1 year</h5>
-                    </div>
-                    <div class="skills-languages-card bg-green-grad">
-                        <h4>python</h4>
-                        <p>level</p>
-                        <h5>beginner</h5>
-                        <p>experience</p>
-                        <h5>6 months</h5>
+                    <div class="skills-languages-row-lg">
+                        <div class="skills-languages-card bg-yellow-grad">
+                            <h4>javascript</h4>
+                            <p>level</p>
+                            <h5>intermediate</h5>
+                            <p>experience</p>
+                            <h5>1 year</h5>
+                        </div>
+                        <div class="skills-languages-card bg-green-grad">
+                            <h4>python</h4>
+                            <p>level</p>
+                            <h5>beginner</h5>
+                            <p>experience</p>
+                            <h5>6 months</h5>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="skills-tools">
-            <h4 class="skills-tools-heading">frameworks & tools</h4>
-            <div class="card-sunken skills-tools-container">
-               <h5 class="tool-name">android-sdk</h5>
-               <h5 class="tool-name">react.js</h5>
-               <h5 class="tool-name">firebase</h5>
-               <h5 class="tool-name">django</h5>
-               <h5 class="tool-name">node.js</h5>
-               <h5 class="tool-name">jetpack library</h5>
-               <h5 class="tool-name">dagger</h5>
-               <h5 class="tool-name">retrofit</h5>
-               <h5 class="tool-name">ms office</h5>
-               <h5 class="tool-name">aws</h5>
-               <h5 class="tool-name">room db</h5>
-               <h5 class="tool-name">mongodb</h5>
-               <h5 class="tool-name">mysql</h5>
-               <h5 class="tool-name">mongoose</h5>
-               <h5 class="tool-name">sequelize</h5>
-               <h5 class="tool-name">coroutines</h5>
-               <h5 class="tool-name">graphql</h5>
-               <h5 class="tool-name">rest api</h5>
-               <h5 class="tool-name">android studio</h5>
-               <h5 class="tool-name">vs code</h5>
-               <h5 class="tool-name">figma</h5>
-               <h5 class="tool-name">git</h5>
-               <h5 class="tool-name">jwt</h5>
-               <h5 class="tool-name">jira</h5>
-               <h5 class="tool-name">photoshop</h5>
-            </div>
-        </div>
-    </section>
-    <!-- <section id="works">
-        <div class="section">
-            <h3>Works</h3>
-            <div class="table">
-                <div class="row">
-                    <div class="card card-work">
-                        <h6>LearnERA</h6>
-                        <p>LearnERA is an Android app for students of Rajagiri College using which they could check
-                            their academic metrics and receive notifications of the right thing at the right time.</p>
-                    </div>
-                    <div class="card card-work">
-                        <h6>Smartitude</h6>
-                        <p>Smartitude is a progressive web app for creating, managing and taking online MCQ exams.</p>
-                    </div>
-                    <div class="card card-work">
-                        <h6>Klant</h6>
-                        <p>Klant is an e-commerce platform for small scale businesses to sell their products to the
-                            massess at ease.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="card card-work">
-                        <h6>CaterBazar</h6>
-                        <p>CaterBazar is an </p>
-                    </div>
-                    <div class="card card-work">
-                        <h6>Wisdom App</h6>
-                    </div>
-                    <div class="card card-work">
-                        <h6>MoHFW Tracker</h6>
-                    </div>
+            <div class="skills-tools">
+                <h4 class="skills-tools-heading">frameworks & tools</h4>
+                <div class="card-sunken skills-tools-container">
+                    <h5 class="tool-name">android-sdk</h5>
+                    <h5 class="tool-name">react.js</h5>
+                    <h5 class="tool-name">firebase</h5>
+                    <h5 class="tool-name">django</h5>
+                    <h5 class="tool-name">node.js</h5>
+                    <h5 class="tool-name">jetpack library</h5>
+                    <h5 class="tool-name">dagger</h5>
+                    <h5 class="tool-name">retrofit</h5>
+                    <h5 class="tool-name">ms office</h5>
+                    <h5 class="tool-name">aws</h5>
+                    <h5 class="tool-name">room db</h5>
+                    <h5 class="tool-name">mongodb</h5>
+                    <h5 class="tool-name">mysql</h5>
+                    <h5 class="tool-name">mongoose</h5>
+                    <h5 class="tool-name">sequelize</h5>
+                    <h5 class="tool-name">coroutines</h5>
+                    <h5 class="tool-name">graphql</h5>
+                    <h5 class="tool-name">rest api</h5>
+                    <h5 class="tool-name">android studio</h5>
+                    <h5 class="tool-name">vs code</h5>
+                    <h5 class="tool-name">figma</h5>
+                    <h5 class="tool-name">git</h5>
+                    <h5 class="tool-name">jwt</h5>
+                    <h5 class="tool-name">jira</h5>
+                    <h5 class="tool-name">photoshop</h5>
                 </div>
             </div>
         </div>
     </section>
-    <section id="education">
+    <section id="works">
+        <div class="works-container container">
+            <div class="section-header">
+                <h2 class="section-header-text">works</h2>
+                <div class="section-header-underline"></div>
+            </div>
+            <div>
+                <h4 class="work-experience-heading">my works</h4>
+                <div class="my-works-container flex-container card-sunken">
+                    <div class="work-container flex-item-left">
+                        <div class="my-works-img"></div>
+                        <div class="my-work-info-container">
+                            <h4 class="works-heading">learnera</h4>
+                            <h5>android application for students of rajagiri college to check their academic metrics and
+                                notifications with the click of a button.</h5>
+                        </div>
+                    </div>
+                    <div class="work-container flex-item-left">
+                        <div class="my-work-info-container">
+                            <h4 class="works-heading">learnera</h4>
+                            <h5>android application for students of rajagiri college to check their academic metrics and
+                                notifications with the click of a button.</h5>
+                        </div>
+                        <div class="my-works-img"></div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="card card-work">
+                <h6>LearnERA</h6>
+                <p>LearnERA is an Android app for students of Rajagiri College using which they could check
+                    their academic metrics and receive notifications of the right thing at the right time.</p>
+            </div>
+            <div class="card card-work">
+                <h6>Smartitude</h6>
+                <p>Smartitude is a progressive web app for creating, managing and taking online MCQ exams.</p>
+            </div>
+            <div class="card card-work">
+                <h6>Klant</h6>
+                <p>Klant is an e-commerce platform for small scale businesses to sell their products to the
+                    massess at ease.</p>
+            </div>
+            <div class="card card-work">
+                <h6>CaterBazar</h6>
+                <p>CaterBazar is an </p>
+            </div>
+            <div class="card card-work">
+                <h6>Wisdom App</h6>
+            </div>
+            <div class="card card-work">
+                <h6>MoHFW Tracker</h6>
+            </div>
+            <div class="work-experience">
+                <h4 class="work-experience-heading">work experience</h4>
+                <div class="card-sunken work-experience-container">
+                    <div class="work-experience-row-lg">
+                        <div class="work-experience-card bg-purple-grad">
+                            <h4>onne app</h4>
+                            <p>role</p>
+                            <h5>software engineer</h5>
+                            <p>experience</p>
+                            <h5>1.5 years</h5>
+                        </div>
+                        <div class="work-experience-card card-elevated">
+                            <h4>more...</h4>
+                            <p>&nbsp;</p>
+                            <h5>&nbsp;</h5>
+                            <p>...</p>
+                            <h5>coming soon</h5>
+                        </div>
+                        <div class="work-experience-card">
+                            <h4>&nbsp;</h4>
+                            <p>&nbsp;</p>
+                            <h5>&nbsp;</h5>
+                            <p>&nbsp;</p>
+                            <h5>&nbsp;</h5>
+                        </div>
+                        <div class="work-experience-card">
+                            <h4>&nbsp;</h4>
+                            <p>&nbsp;</p>
+                            <h5>&nbsp;</h5>
+                            <p>&nbsp;</p>
+                            <h5>&nbsp;</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="achievements">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-header-text">achievements</h2>
+                <div class="section-header-underline"></div>
+            </div>
+            <div class="card-sunken achievements-container">
+                <div class="achievements-row-lg">
+                    <div class="achievements-card bg-purple-grad">
+                        <h4>onne app</h4>
+                        <p>role</p>
+                        <h5>software engineer</h5>
+                        <p>experience</p>
+                        <h5>1.5 years</h5>
+                    </div>
+                    <div class="achievements-card card-elevated">
+                        <h4>more...</h4>
+                        <p>&nbsp;</p>
+                        <h5>&nbsp;</h5>
+                        <p>...</p>
+                        <h5>coming soon</h5>
+                    </div>
+                    <div class="achievements-card">
+                        <h4>&nbsp;</h4>
+                        <p>&nbsp;</p>
+                        <h5>&nbsp;</h5>
+                        <p>&nbsp;</p>
+                        <h5>&nbsp;</h5>
+                    </div>
+                    <div class="achievements-card">
+                        <h4>&nbsp;</h4>
+                        <p>&nbsp;</p>
+                        <h5>&nbsp;</h5>
+                        <p>&nbsp;</p>
+                        <h5>&nbsp;</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- <section id="education">
         <div class="section">
             <h3>Education</h3>
             <table>
@@ -238,18 +328,23 @@
                 </tr>
             </table>
         </div>
-    </section>
+    </section>-->
     <section id="contact">
-        <div class="section">
-            <h3>Contact</h3>
-            <div class="table">
-                <textarea class="form-input" name="message" id="message" cols="80" rows="5"></textarea>
-                <input type="text" name="name" class="form-input" id="name">
-                <input type="email" name="email" id="email" class="form-input">
-                <button type="submit" class="form-input">Submit</button>
+        <div class="contact-container container">
+            <div class="section-header">
+                <h2 class="section-header-text">contact</h2>
+                <div class="section-header-underline"></div>
+            </div>
+            <div class="contact-form-container">
+                <textarea class="card-sunken form-input" name="message" id="message" cols="80" rows="5"
+                    placeholder="your message here..."></textarea>
+                <input type="text" name="name" class="card-sunken form-input" id="name" placeholder="full name">
+                <input type="email" name="email" id="email" class="card-sunken form-input" placeholder="email id">
+                <div class="card-elevated form-button-container"><button type="submit"
+                        class="form-input-button bg-grey-grad">send</button></div>
             </div>
         </div>
-    </section>-->
+    </section>
     <footer class="card-elevated">
         <div class="container footer-container">
             <h2 class="footer-title">made with <span class="heart">❤</span> by prabhashankar</h2>
@@ -272,7 +367,7 @@
                 </div>
             </div>
         </div>
-    </footer> 
+    </footer>
     <script src="js/app.js"></script>
 </body>
 
