added firebase hosting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="./images/cover.jpg" />
     <meta
       property="og:description"
-      content="Coffee, Code and Dark Mode, are my favourites, I am a Software Engineer specialized in cross platform mobile app development and full stack web development."
+      content="Coffee, Code and Dark Mode! I am a Software Engineer specialized in cross platform mobile app development and full stack web development."
     />
     <meta property="og:url" content="https://www.prabhashankar.web.app" />
     <link rel="stylesheet" href="./css/styles.css" />
